// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clickingPanel should render correctly 1`] = `
<div
  className="clicking-panel"
>
  <div
    className="homeButtonWrapper margined-content"
  >
    <FloatingActionButton
      disabled={false}
      mini={true}
      onClick={[MockFunction]}
      secondary={false}
      zDepth={2}
    >
      <FontIcon
        className="material-icons"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        home
      </FontIcon>
    </FloatingActionButton>
  </div>
  <p
    className="clickingDataText"
  >
    Home button was clicked 3 times
  </p>
  <p
    className="clickingDataText"
  >
    Home button was clicked outside 4 times
  </p>
</div>
`;

exports[`clickingPanel single click -should render correctly 1`] = `
<div
  className="clicking-panel"
>
  <div
    className="homeButtonWrapper margined-content"
  >
    <FloatingActionButton
      disabled={false}
      mini={true}
      onClick={[MockFunction]}
      secondary={false}
      zDepth={2}
    >
      <FontIcon
        className="material-icons"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        home
      </FontIcon>
    </FloatingActionButton>
  </div>
  <p
    className="clickingDataText"
  >
    Home button was clicked 1 time
  </p>
</div>
`;

exports[`clickingPanel single click outside - should render correctly 1`] = `
<div
  className="clicking-panel"
>
  <div
    className="homeButtonWrapper margined-content"
  >
    <FloatingActionButton
      disabled={false}
      mini={true}
      onClick={[MockFunction]}
      secondary={false}
      zDepth={2}
    >
      <FontIcon
        className="material-icons"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        home
      </FontIcon>
    </FloatingActionButton>
  </div>
  <p
    className="clickingDataText"
  >
    Home button was clicked outside 1 time
  </p>
</div>
`;
